[package]
name = "iroh-topic-tracker"
version = "0.2.0"
edition = "2024"
authors = ["Zacharias Boehler <rustonbsd@mailfence.com>"]
description = "Iroh universal (gossip) topic tracker based on @Nuhvi's mainline draft proposal: https://github.com/bittorrent/bittorrent.org/pull/174."
license = "MIT"
repository = "https://github.com/rustonbsd/iroh-topic-tracker"
readme = "README.md"
keywords = ["gossip", "iroh", "pubsub", "networking", "tracker"]
categories = ["network-programming"]

[dependencies]
iroh = "0.95"
iroh-gossip = { version = "0.95" }
tokio ={ version="1",features = ["full"] }
anyhow = "1"
rand = { version = "0.9", default-features = false, features = ["std", "std_rng"] }
serde = "1"
serde_json = "1"
bytes = { version = "1", features = ["serde"] }
ed25519-dalek = { version = "3.0.0-pre.1", default-features = false, features = ["rand_core"] }
actor-helper = { version = "0.2", features = ["tokio", "anyhow"] }
postcard = { version = "1", default-features = false, features = ["alloc", "use-std", "experimental-derive"] }
futures-lite = "2"
sha2 = "0.10"
hex = "0.4"

dht = { git = "https://github.com/rustonbsd/mainline", rev="50e11f3bf6b8da8c67bea0257be10a3838aeac94", default-features = false, features = ["async"] }

tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "env-filter", "ansi"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
